# SylannEngine

./: .gitattributes  .gitignore  .sourcery.yaml  AGENT_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SPEC.md  main.py  metadata.yaml  pr5_comments.json  pr5_comments2.json  pr5_comments3.json  pr5_reviews.json  pr5_reviews2.json  pr5_reviews3.json  pyproject.toml
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  design.yml  discussion.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml  sync-sdk.yml
docs/: SPEC.md  max_tier_workflow.md  resonance_field_architecture.md  resonance_field_architecture_zh.md  resonance_field_paper_en.tex  resonance_field_paper_zh.tex  resonance_field_spec.md  scar_void_arxiv_paper_v3.tex  sylanne_4_alpha_computation_model.tex  theoretical_grounding.md  theoretical_spec.md
docs/design/: adr-0001-v3-core-go-no-go.md  affect-calibration-memo.md  affect-dynamics-derivation.md  v25-neuromorphic-redesign.md  v25-pel-core-design.md  v25-pel-core-prd.md  v25-pel-core-techspec.md  v25-pel-core-v2-HANDOFF.md  v25-pel-core-v2-critic.md  v25-pel-core-v2-recon.md  v25-pel-core-v2-upgrade-spec.md  v26-affect-dynamics-design.md  v26-super-standard-campaign.md  v26-upgrade-path.md  v3-realdata-harness-spec.md  v3-review-digest.md  v3-student-pipeline-tdd.md
experiments/: README.md  brain_benchmark.py  brain_eval.py  exp01_convergence.py  exp02_tier_comparison.py  exp02_warmth_calibration.py  exp03_plasticity.py  exp04_kuramoto_sync.py  exp05_hopfield_attractor.py  exp06_expression_bifurcation.py  exp07_harmonic_identity.py  exp08_phi_emergence.py  exp09_stability.py  exp10_personality_modulation.py  exp11_tier_hotswitch.py  exp12_v1_v2_comparison.py  run_all.py  utils.py
presentation/: DEPLOY.md  HANDOFF_DEEPSEEK_MOTION.md  _diag.js  build.py  index.html  site.js  styles.css
presentation/deploy/: Dockerfile  docker-compose.yml  nginx.conf
schemas/: sylanne_interchange_v1.json
sylanne_core/: __init__.py  _assessor_llm.py  _config_store.py  _identity.py  _numeric.py  _rendezvous.py  _sharing.py  adapter.py  algebra.py  assessor.py  bridge.py  config.py  contagion.py  engine.py  expression.py  interchange_validator.py  schema.py  standard.py  types.py
sylanne_core/compute/: __init__.py  affect_dynamics.py  affect_output_contract.py  affect_projection.py  attention.py  autopoiesis.py  body.py  bounded_dict.py  brain_backend.py  brain_backend_coordinator.py  brain_c_lite.py  brain_codec.py  brain_compute.py  brain_errors.py  brain_state.py  brain_store.py  computation_spine.py  (+38 more)
tests/: attention_demo.html  attention_test_plugin.py  conftest.py  test_affect_boundary_contract.py  test_affect_decisions.py  test_affect_domain_adapter.py  test_affect_dynamics.py  test_affect_fragment.py  test_affect_output_contract.py  test_affect_persist.py  test_affect_plasticity.py  test_affect_projection.py  test_affect_shadow_wiring.py  test_affect_silence.py  test_affect_slowchannel.py  test_affect_takeover.py  test_assessor.py  test_axiom_conformance.py  test_body.py  test_brain_backend_coordinator.py  test_brain_c_lite.py  test_brain_config.py  test_brain_engine.py  test_brain_eval.py  test_brain_host_lru.py  test_brain_integration.py  test_brain_resources.py  test_brain_routing.py  test_brain_state.py  test_brain_store.py  test_computation_spine.py  test_config_backend.py  test_config_loading.py  test_conformance_vectors.py  test_deterministic_fusion.py  test_drift_gaps.py  test_edge_cases.py  test_engine.py  test_expression_policy_saddle.py  test_host.py  (+25 more)
training/: generate_data.py  train_model.py  train_model_torch.py
(+43 files in other folders)
