[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sylanne-core"
version = "2.3.1"
description = "Affective computation engine SDK for AstrBot"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [{ name = "Ayleovelle" }]
keywords = ["affective-computing", "emotion", "astrbot", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Ayleovelle/SylannEngine"
Repository = "https://github.com/Ayleovelle/SylannEngine"
Issues = "https://github.com/Ayleovelle/SylannEngine/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff==0.14.2", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["sylanne_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B007", "B905", "SIM102", "SIM103", "SIM105", "SIM108", "SIM109", "UP035", "E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["sylanne_core"]

# 可选加速依赖(numpy / torch)的 import-fallback shim：
# `try: import X / except: X = None  # type: ignore[assignment]`
# 该 ignore 在装了库时(运行时)必需，未装库时(CI 仅装 .[dev])则被判多余。
# strict=true 隐含 warn_unused_ignores，二者无法同时满足，故仅对这几个
# shim 模块关闭该子检查，其余文件保持完整 strict。
[[tool.mypy.overrides]]
module = [
    "sylanne_core.compute.topology_gate",
    "sylanne_core.compute.expression_policy",
    "sylanne_core.compute.resonance_field_torch",
]
warn_unused_ignores = false
